--- a/NLP_by_Deep_Learning/NLP_by_DL_7.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_7.ipynb
@@ -340,7 +340,34 @@
    "source": [
     "---\n",
     "### 7.4　メモリ使用量の削減\n",
-    "\n"
+    "誤差逆伝播法では、順伝播の引数を保存して逆伝播時に使用するが、  \n",
+    "これがメモリ使用量を激増させる主な要因である。\n",
+    "\n",
+    "これを削減する手法の基本は、計算時間の軽い関数の結果を削除し、逆伝播時に再計算を行うことである。\n",
+    "\n",
+    "（予定の範囲を外れるため、このnotebookでは以後省略）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 7.5　誤差逆伝播法の実装\n",
+    "合成関数の微分は自動的に計算されるが、  \n",
+    "最小単位の計算を実装する場合には後ろ向き処理として微分も実装する必要が生じる。  \n",
+    "通常は数値微分により実装の確認を行う。\n",
+    "\n",
+    "define-and-run の TensorFlow等と define-by-run のChainer等では  \n",
+    "最適化手法が一部異なることに注意する。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "以上で『深層学習による自然言語処理』の学習を完了した。"
    ]
   }
  ],
