Add some examples

--- a/utils_etc/tex.ipynb
+++ b/utils_etc/tex.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "texの記法についてメモとして残す。"
+    "texの記法について個人用メモとして残す。"
    ]
   },
   {
@@ -12,15 +12,217 @@
    "metadata": {},
    "source": [
     "---\n",
+    "Tex の表示は環境依存であり、Github上でJupyter notebookに書いたTex文書を表示させると  \n",
+    "正しく表示されないものが少なくありません。  \n",
+    "使用時はご注意ください。\n",
     "\n",
-    "||形式|入力例|表示例|\n",
-    "|---|---|---|---|\n",
+    "\n",
+    "||形式|入力例|表示例（環境依存）|\n",
+    "|:--|:--|:--|---|\n",
     "|上付き文字|^{}|x^{2}|$x^{2}$|\n",
     "|下付き文字|_{}|y_{3}|$y_{3}$|\n",
     "|角度記号|^\\circ|60^\\circ|$60^\\circ$|\n",
+    "|Texにない関数を使う|\\operatorname{}|\\operatorname{argmin}_{\\theta} L(\\theta)|$\\operatorname{argmin}_{\\theta}L(\\theta)$|\n",
+    "|||||\n",
+    "|ベクトル（矢印）|\\overrightarrow{}|\\overrightarrow{a}|$\\overrightarrow{a}$|\n",
+    "|ベクトル（太字）|\\mathbf{}|\\mathbf{x}|$\\mathbf{x}$|\n",
+    "|大括弧など|\\left 記号 ~ \\right 記号|\\left[ \\frac{1}{2} \\right]|$\\left[ \\frac{1}{2} \\right]$|\n",
+    "|平方根|\\sqrt{}|\\sqrt{2}|$\\sqrt{2}$|\n",
+    "|３乗根など|\\sqrt[]{}|\\sqrt[3]{8}|$\\sqrt[3]{8}$|\n",
     "|||||\n",
     "|総和|\\sum|\\sum_{n=1}^{N}|$\\sum_{n=1}^{N}$|\n",
+    "|総乗|\\prod|\\prod_{i=1}^{P}|$\\prod_{i=1}^{P}$|\n",
+    "|積分|\\int|\\int_{0}^{\\pi}|$\\int_{0}^{\\pi}$|\n",
+    "|二重積分|\\int \\\\!\\\\!\\\\! \\int|\\int \\\\!\\\\!\\\\! \\int_{D}|$\\int \\!\\!\\! \\int_{D}$|\n",
+    "|偏微分|\\partial|\\partial L(\\theta)/ \\partial W|$\\partial L(\\theta)/\\partial W$|\n",
+    "|||||\n",
+    "|組み合わせ|{}_{n}C_{k}|{}_{n}C_{k}|${}_{n}C_{k}$|\n",
+    "|順列|{}_{n}P_{k}|{}_{s}P_{t}|${}_{s}P_{t}$|\n",
+    "|重複順列|{}_{n}\\Pi_{k}|{}_{a}\\Pi_{b}|${}_{a}\\Pi_{b}$|\n",
+    "|||||\n",
+    "|全称限量子|\\forall|\\forall x|$\\forall x$|\n",
+    "|存在限量子|\\exists|\\exists y|$\\exists y$|\n",
+    "|否定|\\lnot|\\lnot p_{1}|$\\lnot p_{1}$|\n",
+    "|論理積|\\land|p_1 \\land p_2|$p_1 \\land p_2$|\n",
+    "|論理和|\\lor|p_1 \\lor p_2|$p_1 \\lor p_2$|\n",
+    "|含意|\\to|p_{1} \\to p_{2}|$p_{1} \\to p_{2}$|\n",
+    "|〃|\\Rightarrow|p_{1} \\Rightarrow p_{2}|$p_{1} \\Rightarrow p_{2}$|\n",
+    "|〃|\\models|p_{1} \\models p_{2}|$p_{1} \\models p_{2}$|\n",
+    "|同値|\\equiv|p_{1} \\equiv p_{2}|$p_{1} \\equiv p_{2}$|\n",
+    "|〃|\\Leftrightarrow|p_{1} \\Leftrightarrow p_{2}|$p_{1} \\Leftrightarrow p_{2}$|\n",
+    "\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "数式など複数段にわたって表示されるもの  \n",
+    "　（github上では正しく表示されないものが多く、分数や数式番号は特に崩れやすい）  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 分数\n",
+    "\n",
+    "　形式\n",
+    "<pre>\n",
+    "\\frac{}{}\n",
+    "</pre>\n",
+    "\n",
+    "　入力例\n",
+    "<pre>\n",
+    "\\begin{eqnarray}\n",
+    "\\frac{1+x}{x^{2}+ax-b}\n",
+    "\\end{eqnarray}\n",
+    "</pre>\n",
+    "\n",
+    "　表示\n",
+    "\n",
+    "\\begin{eqnarray}\n",
+    "\\frac{1+x}{x^{2}+ax-b}\n",
+    "\\end{eqnarray}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 行列\n",
+    "　形式　(c:中央、r：右寄せ)\n",
+    "<pre>\n",
+    "\\begin{array}{cc}\n",
+    "a & b \\\\\n",
+    "c & d \\\\\n",
+    "\\end{array}\n",
+    "</pre>\n",
+    "\n",
+    "　入力例\n",
+    "<pre>\n",
+    "\\begin{align*}\n",
+    "A = \\left[\n",
+    "\\begin{array}{ccc}\n",
+    "a_{1,1} & \\cdots & a_{1,n} \\\\\n",
+    "\\vdots & \\ddots & \\cdots \\\\\n",
+    "a_{m,1} & \\cdots & a_{m,n} \\\\\n",
+    "\\end{array}\n",
+    "\\right]\n",
+    "\\end{align*}\n",
+    "</pre>\n",
+    "\n",
+    "　表示\n",
+    "\n",
+    "\\begin{align*}\n",
+    "A = \\left[\n",
+    "\\begin{array}{ccc}\n",
+    "a_{1,1} & \\cdots & a_{1,n} \\\\\n",
+    "\\vdots & \\ddots & \\cdots \\\\\n",
+    "a_{m,1} & \\cdots & a_{m,n} \\\\\n",
+    "\\end{array}\n",
+    "\\right]\n",
+    "\\end{align*}\n",
+    "\n",
+    "行列式ならこんな感じ\n",
+    "\n",
+    "<pre>\n",
+    "\\begin{align*}\n",
+    "  \\mathrm{det}A = |A| = \\left|\n",
+    "    \\begin{array}{ccc}\n",
+    "      a_{11} & a_{12} & a_{13} \\\\\n",
+    "      a_{21} & a_{22} & a_{23} \\\\\n",
+    "      a_{31} & a_{32} & a_{33}\n",
+    "    \\end{array}\n",
+    "  \\right|\n",
+    "\\end{align*}\n",
+    "</pre>\n",
+    "\n",
+    "\\begin{align*}\n",
+    "  \\mathrm{det}A = |A| = \\left|\n",
+    "    \\begin{array}{ccc}\n",
+    "      a_{11} & a_{12} & a_{13} \\\\\n",
+    "      a_{21} & a_{22} & a_{23} \\\\\n",
+    "      a_{31} & a_{32} & a_{33}\n",
+    "    \\end{array}\n",
+    "  \\right|\n",
+    "\\end{align*}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "###  場合分け\n",
+    "\n",
+    "<pre>\n",
+    "\\begin{align*}\n",
+    "\\delta_{ij} = \\begin{cases}\n",
+    "1 & (i=j) \\\\\n",
+    "0 & (i \\neq j)\n",
+    "\\end{cases}\n",
+    "\\end{align*}\n",
+    "</pre>\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\delta_{ij} = \\begin{cases}\n",
+    "1 & (i=j) \\\\\n",
+    "0 & (i \\neq j)\n",
+    "\\end{cases}\n",
+    "\\end{align*}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 一部だけ複数行\n",
+    "（注：自分の環境では begin{array} 後の最初の文字が消失するため、空白記号を挟んでいます）\n",
+    "\n",
+    "<pre>\n",
+    "\\begin{align*}\n",
+    "f(x) = \\left\\{ \\begin{array} \\,\n",
+    "x^{2}+b & (x\\leq 0) \\\\\n",
+    "ax^{3}+cx-d & (x > 0)\n",
+    "\\end{array} \\right\\}\n",
+    "\\hspace{5pt} ( a,b,c,d \\in \\mathbb{R})\n",
+    "\\end{align*}\n",
+    "</pre>\n",
+    "\n",
+    "\\begin{align*}\n",
+    "f(x) = \\left\\{ \\begin{array} \\,\n",
+    "x^{2}+b & (x\\leq 0) \\\\\n",
+    "ax^{3}+cx-d & (x > 0)\n",
+    "\\end{array} \\right\\}\n",
+    "\\hspace{5pt} ( a,b,c,d \\in \\mathbb{R})\n",
+    "\\end{align*}\n",
+    "\n",
+    "右括弧を消せば、場合分けをこちらの書式で書くことも可能。  \n",
+    "このときは \\right\\} の代わりに \\right. を使う。\n",
+    "\n",
+    "<pre>\n",
+    "\\begin{align*}\n",
+    "f(x) = \\left\\{ \\begin{array} \\,\n",
+    "x^{2}+b & (x\\leq 0) \\\\\n",
+    "ax^{3}+cx-d & (x > 0)\n",
+    "\\end{array} \\right.\n",
+    "\\end{align*}\n",
+    "</pre>\n",
+    "\n",
+    "\\begin{align*}\n",
+    "f(x) = \\left\\{ \\begin{array} \\,\n",
+    "x^{2}+b & (x\\leq 0) \\\\\n",
+    "ax^{3}+cx-d & (x > 0)\n",
+    "\\end{array} \\right.\n",
+    "\\end{align*}"
    ]
   }
  ],
