--- a/Corona_NLP_Series/01_Introduction_to_ML_for_NLP/Corona_NLP_01_1.ipynb
+++ b/Corona_NLP_Series/01_Introduction_to_ML_for_NLP/Corona_NLP_01_1.ipynb
@@ -98,7 +98,239 @@
    "metadata": {},
    "source": [
     "---\n",
-    "#### 1.2.1　凸集合と凸関数\n"
+    "#### 1.2.1　凸集合と凸関数\n",
+    "集合 $A \\subseteq R^{d}$ が凸集合（convex set）であるとは、任意の $x^{(1)} \\in A$ と $x^{(2)} \\in A$ があったとき、  \n",
+    "任意の $t \\in [0,1]$ に対して $tx^{(1)} + (1-t)x^{(2)} \\in A$ が成り立つことである。  \n",
+    "これは、集合のないの任意の点を結ぶ線分が集合 $A$ からはみ出ないと理解できる。\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 【例題 1.2】  \n",
+    "ある与えられた平面上にあるという制約を満たすベクトルの集合  \n",
+    "$A=\\{\\mathbf{x} | \\mathbf{m} \\cdot \\mathbf{x} + b = 0, \\mathbf{x} \\in R^{b}\\}$ は凸集合であることを示せ。\n",
+    "\n",
+    "【解答】  \n",
+    "$\\mathbf{x}^{(1)}, \\mathbf{x}^{(2)} \\in A$ とする。このとき $\\mathbf{m}\\cdot\\mathbf{x}^{(1)}+b=\\mathbf{m}\\cdot\\mathbf{x}^{(2)}+b=0$ である。  \n",
+    "任意の実数 $t \\in [0,1]$ に対して $t\\mathbf{x}^{(1)} + (1-t)\\mathbf{x}^{(2)}$ がその平面上にあることを示せばよいので、  \n",
+    "平面の方程式に代入して\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{m} \\cdot (t\\mathbf{x}^{(1)} + (1-t)\\mathbf{x}^{(2)}) + b &= t \\mathbf{m} \\cdot \\mathbf{x}^{(1)} + (1-t) \\mathbf{m} \\cdot \\mathbf{x}^{(2)} + b \\\\\n",
+    "&= t(-b) + (1-t)(-b) + b \\\\\n",
+    "&= 0\n",
+    "\\end{align*}\n",
+    "\n",
+    "より題意は示された。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "半空間 $\\{ \\mathbf{x} | \\mathbf{m} \\cdot \\mathbf{x} + b \\geq 0, \\mathbf{x} \\in R^{d}\\}$ も凸集合である。  \n",
+    "また、２つの凸集合 $A,B$ があるときは$ A \\cap B$ も凸集合であるが、$A \\cup B$ は凸集合になるとは限らない。\n",
+    "\n",
+    "$f(x)=-x^{2}$ のように上に凸な関数を凹関数（concave function）、  \n",
+    "$f(x)=x^{2}$ のように下に凸な関数を凸関数（convex function）と呼ぶ。  \n",
+    "凸関数と凹関数は上下が逆であることを除いて性質が共通するので、両者を合わせて凸関数と表現することもある。  \n",
+    "\n",
+    "==\n",
+    "\n",
+    "関数 $f(\\mathbf{x})$ が上に凸であるとは、任意の $\\mathbf{x}^{(1)}, \\mathbf{x}^{(2)} \\in R^{d}$、任意の $t \\in [0,1]$ に対し  \n",
+    "$f(t\\mathbf{x}^{(1)} + (1-t)\\mathbf{x}^{(2)} \\geq tf(\\mathbf{x}^{(1)}) + (1-t)f(\\mathbf{x}^{(2)})$ が成立することである。  \n",
+    "下に凸であることは上式の不等号を逆にすればよい。\n",
+    "\n",
+    "これらはスカラー値関数についてのみ定義される。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 例題 1.3  \n",
+    "　$f(x)=-x^{2}$ が上に凸であることを示せ。\n",
+    "\n",
+    "解答  \n",
+    "　任意の $x^{(1)}, x^{(2)} (\\in R)$ に対し不等式が成り立てば良い。$0 \\leq t \\leq 1$ とすると  \n",
+    "　（代入するだけなので以下省略）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 例題 1.4  \n",
+    "　(i)　上に凸な２つの関数の和は上に凸な関数であることを示せ。  \n",
+    "　(ii) $f(x)$ が上に凸な関数ならば、$a$ が非負の定数のとき、$af(x)$ も上に凸な関数であることを示せ。\n",
+    "\n",
+    "解答  \n",
+    "(i) f(x)およびg(x)が上に凸な関数であるとき、その和 h(x)=f(x)+g(x)について\n",
+    "\n",
+    "\\begin{align*}\n",
+    "h(tx^{(1)}+(1-t)x^{(2)}) &= f(tx^{(1)}+(1-t)x^{(2)}) + g(tx^{(1)}+(1-t)x^{(2)}) \\\\\n",
+    "& \\geq tf(x^{(1)}) + (1-t)f(x^{(2)}) + tg(x^{(1)}) + (1-t)g(x^{(2)}) \\\\\n",
+    "&= th(x^{(1)}) + (1-t)h(x^{(2)})\n",
+    "\\end{align*}\n",
+    "\n",
+    "より示された。\n",
+    "\n",
+    "(ii) f(x)が上に凸な関数であるとき、h(x) = af(x) とすると\n",
+    "\n",
+    "\\begin{align*}\n",
+    "h(tx^{(1)}+(1-t)x^{(2)}) &= af(tx^{(1)}+(1-t)x^{(2)}) \\\\\n",
+    "&\\geq atf(x^{(1)}) + a(1-t)f(x^{(2)}) \\\\\n",
+    "&= th(x^{(1)}) + (1-t)fh(x^{(2)})\n",
+    "\\end{align*}\n",
+    "\n",
+    "より示された。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 例題 1.5\n",
+    "関数 f は上に凸であるとする。このとき、任意の $x^{(1)} \\in R$ と $x^{(2)} \\in R$ について  \n",
+    "$f(x^{(2)} - f(x^{(1)}) \\leq \\frac{\\partial f(x^{(1)})}{\\partial x}(x^{(2)}-x^{(1)})$ が成り立つことを示せ。\n",
+    "\n",
+    "解答  \n",
+    "関数 f は上に凸であるから、任意の $x^{(1)}, x^{(2)}, t\\in[0,1]$ に対して $x^{(1)}<x^{(2)}$ として一般性を失わず、\n",
+    "\n",
+    "\\begin{align*}\n",
+    "f(tx^{(1)}+(1-t)x^{(2)}) \\geq tf(x^{(1)}) + (1-t)f(x^{(2)})\n",
+    "\\end{align*}\n",
+    "\n",
+    "が成り立つ。よって $h=1-t$ と置き直すと\n",
+    "\n",
+    "\\begin{align*}\n",
+    "f(x^{(2)}) &\\leq f(x^{(1)}) + \\frac{f(x^{(1)} + t(x^{(2)} - x^{(1)})) - f(x^{(1)})}{h} \\\\\n",
+    "&= f(x^{(1)}) + \\frac{f(x^{(1)} + t(x^{(2)} - x^{(1)})) - f(x^{(1)})}{h(x^{(2)}-x^{(1)})}(x^{(2)}-x^{(1)})\n",
+    "\\end{align*}\n",
+    "\n",
+    "となるので、$h\\rightarrow0$ とすることで題意が示される。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "上記は逆も成り立ち、多変数関数についても成り立つ。  \n",
+    "この条件は凸関数であるための１次の条件（first-order convexity condition）と呼ばれる。\n",
+    "\n",
+    "次に、凸関数であるための２次の条件（second-order convexity condition）について考える。  \n",
+    "１変数のときは次の通り。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 例題 1.6\n",
+    "１変数関数 $f(x)$ が上に凸であるとき、２階微分 $f''(x)$ は常に負または０であることを示せ。\n",
+    "\n",
+    "解答  \n",
+    "例題 1.5 より、$\\delta x$ を $x$ の微小変化量として $f(x+\\delta x) - f(x) \\leq f'(x)\\delta x$ が成り立つ。  \n",
+    "テイラー展開により\n",
+    "\n",
+    "\\begin{align*}\n",
+    "f(x+\\delta x) - f(x) = f'(x)\\delta x + \\frac{f''(x)}{2}\\delta x^{2} + O(\\delta x^{3})\n",
+    "\\end{align*}\n",
+    "\n",
+    "と表せる。この２式より\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\frac{f''(x)}{2}\\delta x^{2} + O(\\delta x^{3}) \\leq 0\n",
+    "\\end{align*}\n",
+    "\n",
+    "である。これが成り立つためには $f''(x)\\leq0$ が必要である。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "２次の条件も逆が成り立つ。  \n",
+    "ここで、多変数関数の場合での凸関数であるための２次の条件を考える。  \n",
+    "\n",
+    "いろいろな変数の組についての微分はヘッセ行列（Hessian matrix）$\\mathbf{H}_{\\mathbf{x}}$ で表すことができる。  \n",
+    "ヘッセ行列の (i,j) 成分は\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\frac{\\partial^{2} f(\\mathbf{x})}{\\partial x_{i} \\partial x_{j}}\n",
+    "\\end{align*}\n",
+    "\n",
+    "である。\n",
+    "\n",
+    "任意の $n$ 次元ベクトル $\\mathbf{x}$ について $\\mathbf{x}^{\\mathrm{T}}M\\mathbf{x} \\geq 0$ が成り立つとき、$M$ は半正定値であるという。  \n",
+    "同様に、$\\mathbf{x}^{\\mathrm{T}}M\\mathbf{x} \\leq 0$ が成り立つとき $M$ は半負定値であるという。\n",
+    "\n",
+    "一般に、関数が下に凸であるための必要十分条件はヘッセ行列が半正定値であることであり、  \n",
+    "関数が上に凸であるための必要十分条件はヘッセ行列が半負定値であることである。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 補項：行列の正定値／負定値\n",
+    "　参考：[多変数関数の極値判定とヘッセ行列](https://mathtrain.jp/hessian)\n",
+    "\n",
+    "$f$ が $C^{2}$ 級（二回連続微分可能）のとき、偏微分の順序は交換できるためヘッセ行列は対称行列となる。\n",
+    "\n",
+    "$n \\times n$ 実対称行列 $H$ に対して以下の条件は全て同値であり、いずれかを満たす行列を正定値行列という。\n",
+    " - 0ベクトルではない全ての $n$ 次元列ベクトル $\\mathbf{x}$ に対して $\\mathbf{x}^{\\mathrm{T}} H \\mathbf{x}$ が正\n",
+    " - $H$ の固有値が全て正\n",
+    " - 首座小行列の行列式が全て正\n",
+    "\n",
+    "また、$-H$ が正定値のとき $H$ を負定値という。\n",
+    "\n",
+    "１変数関数における極値判定の手法は、多変数関数においてもヘッセ行列を用いることで適用可能で、\n",
+    " - 極値 -> ある点で偏導関数の値が全て0\n",
+    " - ある点で偏導関数の値が全て0かつヘッセ行列が正定値 -> 極小値\n",
+    " - ある点で偏導関数の値が全て0かつヘッセ行列が負定値 -> 極大値\n",
+    "\n",
+    "が成り立つ。\n",
+    "\n",
+    "例：  \n",
+    "　$f(x,y)=x^{3}+2xy+y^{2}-x$ の極値を求めよ。  \n",
+    "\n",
+    "解答：  \n",
+    "　$f_x = 3x^2 + 2y - 1, f_y=2x + 2y$ であるから  \n",
+    "　$f_xx=6x, f_xy = f_yx = 2, f_yy=2$  \n",
+    "　よってヘッセ行列は  \n",
+    " \n",
+    "\\begin{align*}\n",
+    "\\left( \\begin{array}\\, 6x & 2 \\\\ 2 & 2 \\end{array} \\right)\n",
+    "\\end{align*}\n",
+    "\n",
+    "　$f_x=0, f_y=0$ より $(x,y) = (1,-1), (-\\frac{1}{3}, \\frac{1}{3})$\n",
+    " \n",
+    "　$(x,y)=(1,-1)$ のときヘッセ行列 $ \\left( \\begin{array}\\, 6 & 2 \\\\ 2 & 2 \\end{array} \\right)$ の首座小行列の行列式は全て正であるから正定値であることがわかり、  \n",
+    "　$(1,-1)$ で $f(x,y)$ は極小値 $f(1,-1)=-1$ をとる。\n",
+    " \n",
+    "　$(x,y)=(-\\frac{1}{3},\\frac{1}{3})$ のときヘッセ行列 $ \\left( \\begin{array}\\, -2 & 2 \\\\ 2 & 2 \\end{array} \\right)$ は正定値でも負定値でもなく、極値かどうかは不明。  \n",
+    "　（実際には鞍点である）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 1.2.2　凸計画問題\n"
    ]
   }
  ],
