--- a/Corona_NLP_Series/01_Introduction_to_ML_for_NLP/Corona_NLP_01_1.ipynb
+++ b/Corona_NLP_Series/01_Introduction_to_ML_for_NLP/Corona_NLP_01_1.ipynb
@@ -330,7 +330,124 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### 1.2.2　凸計画問題\n"
+    "### 1.2.2　凸計画問題\n",
+    "ある最適化問題が凸計画問題であるとは、その目的関数が凸関数であって、  \n",
+    "かつ実行可能領域が凸集合であることを言う。\n",
+    "\n",
+    "変数の取りうる範囲に制約がない場合を考える。  \n",
+    "$A$ と $B$ が凸集合でも $A \\cup B$ は凸集合とは限らないが、  \n",
+    "$A$ での最適解と $B$ の最適解の良いほうを選べば $A \\cup B$ での最適解が求められる。\n",
+    "\n",
+    "目的関数が凸であり特に制約もなければ微分して０になる点を求めれば良いが、  \n",
+    "実際のところ閉形式で解が求まらないような難しい問題はしばしば見られる。  \n",
+    "この場合には何らかの解を初期値として与えて少しずつ良い解へと更新する解法が用いられ、  \n",
+    "このような解法を数値解法（numerical method）という。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "数値解法の２つの基本的な解法のひとつは**最急勾配法**（gradient method）である。  \n",
+    "目的関数の傾きが最も急な方向に変数の値を変化させる方法で  \n",
+    "目的が最大化なら最急上昇法（gradient ascent method）、  \n",
+    "最小化ならば最急降下法（gradient descent method）と呼ばれる。\n",
+    "\n",
+    "最急勾配法の更新式は、$\\eta$ を学習率として一般に次のように書かれる。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{x}^{(i+1)} = \\mathbf{x}^{(i)} + \\eta \\nabla_{v}f(\\mathbf{x}^{(i)})\n",
+    "\\end{align*}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "数値解法のもう一つは**ニュートン法**（Newton's method）である。  \n",
+    "ヘッセ行列を $H_{\\mathbf{x}}$ とすると、更新式は次の通り。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{x}^{(i+1)} = \\mathbf{x}^{(i)} -  H_{\\mathbf{x}^{(i)}}^{-1} \\nabla_{\\mathbf{x}} f(\\mathbf{x}^{(i)})\n",
+    "\\end{align*}\n",
+    "\n",
+    "ニュートン法では２階微分まで考慮しているため勾配法より効率的だが  \n",
+    "実用上は逆行列の計算が必要で計算コストが高いため、何らかの近似が行われることが多い。  \n",
+    "　->　準ニュートン法（DFP法、BFGS法など）\n",
+    "\n",
+    "さて、ニュートン法はもともと方程式 $h(\\mathbf{x})=0$ を解く方法である。  \n",
+    "$h(x)=0$ が一次元の方程式であるとき、更新式は\n",
+    "\n",
+    "\\begin{align*}\n",
+    "x^{i+1} = x^{i} - \\left( \\frac{\\partial h(x^{i})}{\\partial x} \\right)^{-1} h(x^{i})\n",
+    "\\end{align*}\n",
+    "\n",
+    "となる。  \n",
+    "\n",
+    "制約なし凸計画問題においては $\\nabla_{\\mathbf{x}} f(\\mathbf{x})=0$ を解くことで最適解を求められるので、  \n",
+    "ニュートン法を最適化問題に用いることができる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 補題：ニュートン法追記  \n",
+    "　参考：  \n",
+    "　　[最急降下法とニュートン法を用いた最適化](https://qiita.com/ruka38/items/bd212cb1741d35d8dde3)  \n",
+    "　　[ニュートン法とは何か？？ニュートン法で解く方程式の近似解](https://qiita.com/PlanetMeron/items/09d7eb204868e1a49f49)  \n",
+    "　　[最適化超入門](https://www.slideshare.net/tkm2261/ss-42149384)  \n",
+    "\n",
+    "ニュートン法は、$f(x)=0$ を満たす $x$  を探す際に、  \n",
+    "ある値 $x_{i}$ における接線の切片 $x_{i+1} = x_{i} - \\frac{f(x_i)}{f'(x_i)}$ は元の値よりも真の値 $x$ に近づく  \n",
+    "という考え方が基本となっている。  \n",
+    "　（関数を反復点で二次近似し、その最小点に移動している）\n",
+    "\n",
+    "$f(x)=0$ となる $x \\in \\mathbb{R}$ を求める。  \n",
+    "点 $x=x_0$ のまわりで２次のテーラー展開をすると\n",
+    "\n",
+    "\\begin{align*}\n",
+    "f(x) = f(x_0) + f'(x_0)(x-x_0) + O((x-x_0)^2)\n",
+    "\\end{align*}\n",
+    "\n",
+    "右辺より $f(x)=0$ の解は\n",
+    "\n",
+    "\\begin{align*}\n",
+    "x = x_0 - \\frac{f(x_0)}{f'(x_0)}\n",
+    "\\end{align*}\n",
+    "\n",
+    "これをiteration回数について一般化すると、更新式は次のようになる。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "x_{i+1} = x_{i} - \\frac{f(x_i)}{f'(x_i)}\n",
+    "\\end{align*}\n",
+    "\n",
+    "$f(x)=0$ ではなく $min(g(x))$ を求めるものとすると、$f(x) = g'(x)$ と置き換えればよいので\n",
+    "\n",
+    "\\begin{align*}\n",
+    "x_{i+1} = x_{i} - \\frac{g'(x_i)}{g''(x_i)}\n",
+    "\\end{align*}\n",
+    "\n",
+    "という表記になる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 1.2.3　等式制約付き凸計画問題\n",
+    "次の問題を考える。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "&\\text{max.} \\, f(\\mathbf{x}) \\\\\n",
+    "&\\text{s.t.} \\, g(\\mathbf{x})=0\n",
+    "\\end{align*}\n",
+    "\n"
    ]
   }
  ],
