--- a/Corona_NLP_Series/01_Introduction_to_ML_for_NLP/Corona_NLP_01_1.ipynb
+++ b/Corona_NLP_Series/01_Introduction_to_ML_for_NLP/Corona_NLP_01_1.ipynb
@@ -447,6 +447,109 @@
     "&\\text{max.} \\, f(\\mathbf{x}) \\\\\n",
     "&\\text{s.t.} \\, g(\\mathbf{x})=0\n",
     "\\end{align*}\n",
+    "\n",
+    "ラグランジュ乗数 $\\lambda$（Lagrange multiplier）を変数としてもつ  \n",
+    "以下のラグランジュ関数（Lagrangian）を導入する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "L(\\mathbf{x}, \\lambda) = f(\\mathbf{x}) + \\lambda g(\\mathbf{x})\n",
+    "\\end{align*}\n",
+    "\n",
+    "この関数 $L(\\mathbf{x}, \\lambda)$ の $\\mathbf{x}$ に関する変数が０となり、かつ与えられた制約が満たされるとき、  \n",
+    "最適な解が得られることが知られている。つまり\n",
+    "\n",
+    "\\begin{align*}\n",
+    "& \\nabla_{\\mathbf{x}} f(\\mathbf{x}) + \\lambda \\nabla_{\\mathbf{x}}g(\\mathbf{x}) = 0, \\\\\n",
+    "& g(\\mathbf{x}) = 0\n",
+    "\\end{align*}\n",
+    "\n",
+    "という連立方程式を解けばよい。  \n",
+    "上記の連立方程式は、$g(\\mathbf{x})=0$ の代わりに\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\frac{\\partial L(\\mathbf{x},\\lambda)}{\\partial \\lambda}=0\n",
+    "\\end{align*}\n",
+    "\n",
+    "と書くこともある。\n",
+    "\n",
+    "\n",
+    "\n",
+    "このようにして最適点を求める手法を、**ラグランジュの(未定)乗数法**（the method of Lagrange multipliers）と呼ぶ。  \n",
+    "この手法は、確率分布のパラメータ推定、EMアルゴリズム、ナイーブベイズ分類器、SVMなどで用いられる。\n",
+    "\n",
+    "ラグランジュの乗数法における１つめの式は\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\nabla_{\\mathbf{x}} f(\\mathbf{x}) = - \\lambda \\nabla_{\\mathbf{x}}g(\\mathbf{x})\n",
+    "\\end{align*}\n",
+    "\n",
+    "と変形することができる。  \n",
+    "これは目的関数がつくる等高線の法線ベクトルが $g(\\mathbf{x})=0$ の法線ベクトルのスカラー倍であること、  \n",
+    "すなわち等高線と $g(\\mathbf{x})=0$ が接しているための必要条件を示す。\n",
+    "\n",
+    "これは、接していなければ $g(\\mathbf{x})=0$ に沿ってより良い等高線に移動できるため、  \n",
+    "別に最適な点が存在するからである。\n",
+    "\n",
+    "後者の式も接するための必要条件である。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "例題 1.7\n",
+    "\n",
+    "\\begin{align*}\n",
+    "& \\text{max.  } -x_1^2 - x_2^2 \\\\\n",
+    "& \\text{s.t.  } x_1 + x_2 - 1 = 0\n",
+    "\\end{align*}\n",
+    "\n",
+    "この問題が凸計画問題であることは明らかである。ラグランジュ関数は次の通り。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "L(x_1, x_2, \\lambda) = -x_1^2 -x_2^2 + \\lambda (x_1 + x_2 - 1)\n",
+    "\\end{align*}\n",
+    "\n",
+    "これを偏微分して\n",
+    "\n",
+    "\\begin{align*}\n",
+    "& \\frac{\\partial L (x_1, x_2, \\lambda )}{\\partial x_1} = -2 x_1 + \\lambda, & \\frac{\\partial L(x_1, x_2, \\lambda)}{\\partial x_2} = -2 x_2 + \\lambda\n",
+    "\\end{align*}\n",
+    "\n",
+    "これより\n",
+    "\\begin{align*}\n",
+    "& -2 x_1 + \\lambda = 0, \\hspace{10pt} -2 x_2 + \\lambda = 0, \\hspace{10pt} x_1 + x_2 - 1 = 0 \\\\\n",
+    "& \\therefore  (x_1, x_2) = (1/2, 1/2)\n",
+    "\\end{align*}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "制約が複数の場合、それぞれの制約に対して一つのラグランジュ乗数を考えればよく、  \n",
+    "下記のようにラグランジュ関数をつくればよい。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "L(\\mathbf{x}, \\lambda) = f(\\mathbf{x}) + \\sum_{i} \\lambda_i g_i (\\mathbf{x})\n",
+    "\\end{align*}\n",
+    "\n",
+    "これはベクトル表記で書かれることもある。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "L(\\mathbf{x}, \\mathbf{\\lambda}) = f(\\mathbf{x}) +  \\mathbf{\\lambda} \\cdot \\mathbf{g}(\\mathbf{x})\n",
+    "\\end{align*}\n",
+    "\n",
+    "このとき、次の連立方程式を解く。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "& \\nabla_{\\mathbf{x}} f(\\mathbf{x}) + \\nabla_{\\mathbf{x}} ( \\mathbf{\\lambda} \\cdot \\mathbf{g}(\\mathbf{x})) = \\mathbf{0}, \\\\\n",
+    "& \\mathbf{g}(\\mathbf{x}) = \\mathbf{0} .\n",
+    "\\end{align*}\n",
+    "\n",
     "\n"
    ]
   }
