--- a/Corona_NLP_Series/01_Introduction_to_ML_for_NLP/Corona_NLP_01_1.ipynb
+++ b/Corona_NLP_Series/01_Introduction_to_ML_for_NLP/Corona_NLP_01_1.ipynb
@@ -552,6 +552,43 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 1.2.4　不等式制約付き凸計画問題\n",
+    "\n",
+    "\\begin{align*}\n",
+    "&\\text{max.} \\, f(\\mathbf{x}) \\\\\n",
+    "&\\text{s.t.} \\, g(\\mathbf{x}) \\geq 0\n",
+    "\\end{align*}\n",
+    "\n",
+    "この場合にはラグランジュ乗数を $\\lambda \\geq 0$ としてラグランジュ関数をつくる。\n",
+    "\n",
+    "さて、ラグランジュ関数 $L(\\mathbf{x}, \\lambda)$ について次のような不等式をみたす点 $(\\mathbf{x}^*, \\lambda^*)$ が存在するとき、  \n",
+    "この点を $L$ の**鞍点**（saddle point）という。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "L(\\mathbf{x}, \\lambda^*) \\leq L(\\mathbf{x}^*, \\lambda^*) \\leq L(\\mathbf{x}^*, \\lambda)\n",
+    "\\end{align*}\n",
+    "\n",
+    "鞍点は $\\mathbf{x}$ に関して最大値となり、$\\lambda$ に関して最小値となる点である。  \n",
+    "凸計画問題においては鞍点 $(\\mathbf{x}^*, \\lambda^*)$ が最適解を与えることが知られている。\n",
+    "\n",
+    "鞍点を得るには、まず $L(\\mathbf{x}, \\lambda)$ を最大化する $\\mathbf{x}$ を求めて $\\mathbf{x}^* (\\lambda)$ と表し、  \n",
+    "$L(\\mathbf{x}^* (\\lambda), \\lambda^*)$ を $\\lambda$ について最小化すればよい。  \n",
+    "このとき、もともとの問題を主問題（primal problem）、後者の最小化を双対問題（dual problem）とよぶ。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 1.3　確率\n"
+   ]
   }
  ],
  "metadata": {
