--- a/Corona_NLP_Series/01_Introduction_to_ML_for_NLP/Corona_NLP_01_1.ipynb
+++ b/Corona_NLP_Series/01_Introduction_to_ML_for_NLP/Corona_NLP_01_1.ipynb
@@ -589,6 +589,124 @@
     "---\n",
     "### 1.3　確率\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 1.3.1　期待値、平均、分散\n",
+    "\n",
+    "\\begin{align*}\n",
+    "& \\text{expected value / mean : } & m_X = \\sum_x P(X=x) \\\\\n",
+    "& \\text{variance : } & \\sigma^2_X = \\sum_x (x-m_X)^2 P (X=x) \\\\\n",
+    "& \\text{sample mean : } & \\bar{X} = \\frac{1}{|D|} \\sum_{x^{(i)} \\in D} x^{(i)} \\hspace{10pt} \\text{for observed data } D = \\{x^{(1)}, \\ldots, x^{(|D|)}\\} \\\\\n",
+    "& \\text{sample variance : } & S^2 = \\frac{1}{|D|} \\sum_{x^{(i)} \\in D} (x^{(i)} - \\bar{X})^2\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 1.3.2　結合確率と条件付き確率\n",
+    "ベイズの定理 (Bayes' theorem)\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P(y|x) = \\frac{P(y)P(x|y)}{P(x)}\n",
+    "\\end{align*}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 1.3.3　独立性\n",
+    "２つの確率変数 $X,Y$ のそれぞれの任意の値 $x,y$ について\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P(X=x, Y=y) = P(X=x) P(Y=y)\n",
+    "\\end{align*}\n",
+    "\n",
+    "が成立するとき、$X$ と $Y$ は独立であるという。\n",
+    "\n",
+    "$P(y) \\neq 0$ のとき、上の等式は\n",
+    "\n",
+    "\\begin{align*}\n",
+    "& P(X=x, Y=y) = P(X=x) P(Y=y) \\\\\n",
+    "& \\iff P(x|y)P(y) = P(x)P(y) \\\\\n",
+    "& \\iff P(x|y) = P(x)\n",
+    "\\end{align*}\n",
+    "\n",
+    "と変形できる。  \n",
+    "確率変数が３つ以上のときも同様に定義できる。\n",
+    "\n",
+    "\n",
+    "また、３つの確率変数 $X_1, X_2, X_3$ があり、\n",
+    "$X_3$ のある実現値 $x_3$ に対して $X_1, X_2$ の任意の実現値 $x_1, x_2$ について\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P(X_1=x_1, X_2=x_2|x_3) = P(X_1=x_1|x_3)P(X_2=x_2|x_3)\n",
+    "\\end{align*}\n",
+    "\n",
+    "が成立するとき、$X_1$ と $X_2$ は、$X_3=x_3$ という条件のもとで条件付き独立 (conditionaly independent) であるという。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 1.3.4　代表的な離散確率分布\n",
+    "以降、パラメータ $p$ を明記する場合は、$P(x;p)$ のようにセミコロンの後ろに書くこととする。\n",
+    "\n",
+    "#### １．ベルヌーイ分布（Bernoulli distribution）\n",
+    "Yes/No など２値をとる確率変数を記述する分布である。  \n",
+    "確率変数 $X$ が確率 $p$ で $a$、確率 $1-p$ で $b$ をとるとき、確率 $P(X=x;p)$ はデルタ関数を用いて\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P(X = x;p) &= \\delta(x,a)p + \\delta(x,b)(1-p) \\\\\n",
+    "&= \\delta(x,a)p + (1-\\delta(x,a))(1-p) \\\\\n",
+    "&= p^{\\delta(x,a)} (1-p)^{1-\\delta(x,a)}\n",
+    "\\end{align*}\n",
+    "\n",
+    "と表すことができる。\n",
+    "\n",
+    "#### ２．二項分布\n",
+    "２値をとる試行が $n$ 回おこなわれたとき、その $x$ 回で一方が出る確率を与える分布である。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P(x;p,n) = {}_n C_x p^x (1-p)^{n-x}\n",
+    "\\end{align*}\n",
+    "\n",
+    "#### ３．多項分布 (multinomial distribution)\n",
+    "$m$ 個の値をとりうる確率変数があり、各値にはそれぞれ $p1, p_2, \\ldots, p_m$ の確率が与えられ総和が１とする。  \n",
+    "このうち一つが起こるような試行を $n$ 回行った場合、各値がそれぞれ $k_1, \\ldots, k_m$ 回起こる確率は\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\frac{n!}{\\prod_i k_i !} \\prod_i p_i^{k_i}\n",
+    "\\end{align*}\n",
+    "\n",
+    "で与えられる。\n",
+    "\n",
+    "#### ４．ポアソン分布 (Poisson distribution)\n",
+    "0以上の整数を値とする確率変数の確率分布であり、次式で与えられる。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P(x;\\mu) = \\frac{\\mu^{x}}{x!} e^{-\\mu}\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 1.4　連続確率変数\n"
+   ]
   }
  ],
  "metadata": {
